--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-registry = http://15.206.81.210:8081/repository/npm-group-all/
-_auth=ZGVwbG95LXVzZXI6ZGVwbG95LXVzZXIxMjM=
+registry = http://13.59.35.215:8081/repository/npm-group-repo-bhanu/
+_auth=YWRtaW46YWRtaW4=
